@@ -1,3 +1,8 @@
+2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 
+
+	* Banter/ChatWindow.cs: Added check so we dont' connect more than once
+	  when window is shown
+
 2007-06-07  Brady Anderson <brady.anderson@gmail.com> 
 
 	call the Close method on all outstanding channels
